external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/operators/boolean_not_non_boolean.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/translated_ir_tests/move/operators/boolean_not_non_boolean.move:3:6
  │
3 │     !0;
  │      ^
  │      │
  │      Invalid argument to '!'
  │      Expected: 'bool'
  │      Given: integer
